manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-api
  labels:
    app: movies-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movies-api
  template:
    metadata:
      labels:
        app: movies-api
    spec:
      containers:
        - name: movies-api
          image: kinoroomregistry.azurecr.io/movies_api:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
